// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should do a snapshot test of the Avatar DOM with four elements 1`] = `
<div
  className=" sendbird-avatar"
  role="button"
  style={
    Object {
      "height": "56px",
      "width": "56px",
    }
  }
  tabIndex={0}
>
  <div
    className="sendbird-avatar--inner__four-child"
  >
    <div
      className="sendbird-avatar-img rogu-image-renderer"
    >
      <div
        className="rogu-image-renderer__image"
        style={
          Object {
            "backgroundImage": "url(https://avatars3.githubusercontent.com/u/46333979?s=460&v=4)",
            "borderRadius": null,
          }
        }
      />
      <img
        alt=""
        className="rogu-image-renderer__hidden-image-loader"
        onError={[Function]}
        onLoad={[Function]}
        src="https://avatars3.githubusercontent.com/u/46333979?s=460&v=4"
      />
    </div>
    <div
      className="sendbird-avatar-img rogu-image-renderer"
    >
      <div
        className="rogu-image-renderer__image"
        style={
          Object {
            "backgroundImage": "url(https://avatars1.githubusercontent.com/u/1384313?s=460&v=4)",
            "borderRadius": null,
          }
        }
      />
      <img
        alt=""
        className="rogu-image-renderer__hidden-image-loader"
        onError={[Function]}
        onLoad={[Function]}
        src="https://avatars1.githubusercontent.com/u/1384313?s=460&v=4"
      />
    </div>
    <div
      className="sendbird-avatar-img rogu-image-renderer"
    >
      <div
        className="rogu-image-renderer__image"
        style={
          Object {
            "backgroundImage": "url(https://avatars2.githubusercontent.com/u/11382805?s=460&v=4)",
            "borderRadius": null,
          }
        }
      />
      <img
        alt=""
        className="rogu-image-renderer__hidden-image-loader"
        onError={[Function]}
        onLoad={[Function]}
        src="https://avatars2.githubusercontent.com/u/11382805?s=460&v=4"
      />
    </div>
    <div
      className="sendbird-avatar-img rogu-image-renderer"
    >
      <div
        className="rogu-image-renderer__image"
        style={
          Object {
            "backgroundImage": "url()",
            "borderRadius": null,
          }
        }
      />
      <img
        alt=""
        className="rogu-image-renderer__hidden-image-loader"
        onError={[Function]}
        onLoad={[Function]}
        src=""
      />
    </div>
  </div>
</div>
`;

exports[`Avatar should do a snapshot test of the Avatar DOM with single element 1`] = `
<div
  className=" sendbird-avatar"
  role="button"
  style={
    Object {
      "height": "56px",
      "width": "56px",
    }
  }
  tabIndex={0}
>
  <div
    className="sendbird-avatar-img rogu-image-renderer"
  >
    <div
      className="rogu-image-renderer__image"
      style={
        Object {
          "backgroundImage": "url(https://avatars3.githubusercontent.com/u/46333979?s=460&v=4)",
          "borderRadius": null,
        }
      }
    />
    <img
      alt=""
      className="rogu-image-renderer__hidden-image-loader"
      onError={[Function]}
      onLoad={[Function]}
      src="https://avatars3.githubusercontent.com/u/46333979?s=460&v=4"
    />
  </div>
</div>
`;

exports[`Avatar should do a snapshot test of the Avatar DOM with three elements 1`] = `
<div
  className=" sendbird-avatar"
  role="button"
  style={
    Object {
      "height": "56px",
      "width": "56px",
    }
  }
  tabIndex={0}
>
  <div
    className="sendbird-avatar--inner__three-child--upper"
  >
    <div
      className="sendbird-avatar-img rogu-image-renderer"
    >
      <div
        className="rogu-image-renderer__image"
        style={
          Object {
            "backgroundImage": "url(https://avatars3.githubusercontent.com/u/46333979?s=460&v=4)",
            "borderRadius": null,
          }
        }
      />
      <img
        alt=""
        className="rogu-image-renderer__hidden-image-loader"
        onError={[Function]}
        onLoad={[Function]}
        src="https://avatars3.githubusercontent.com/u/46333979?s=460&v=4"
      />
    </div>
  </div>
  <div
    className="sendbird-avatar--inner__three-child--lower"
  >
    <div
      className="sendbird-avatar-img rogu-image-renderer"
    >
      <div
        className="rogu-image-renderer__image"
        style={
          Object {
            "backgroundImage": "url(https://avatars1.githubusercontent.com/u/1384313?s=460&v=4)",
            "borderRadius": null,
          }
        }
      />
      <img
        alt=""
        className="rogu-image-renderer__hidden-image-loader"
        onError={[Function]}
        onLoad={[Function]}
        src="https://avatars1.githubusercontent.com/u/1384313?s=460&v=4"
      />
    </div>
    <div
      className="sendbird-avatar-img rogu-image-renderer"
    >
      <div
        className="rogu-image-renderer__image"
        style={
          Object {
            "backgroundImage": "url(https://avatars2.githubusercontent.com/u/11382805?s=460&v=4)",
            "borderRadius": null,
          }
        }
      />
      <img
        alt=""
        className="rogu-image-renderer__hidden-image-loader"
        onError={[Function]}
        onLoad={[Function]}
        src="https://avatars2.githubusercontent.com/u/11382805?s=460&v=4"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar should do a snapshot test of the Avatar DOM with two elements 1`] = `
<div
  className=" sendbird-avatar"
  role="button"
  style={
    Object {
      "height": "56px",
      "width": "56px",
    }
  }
  tabIndex={0}
>
  <div
    className="sendbird-avatar--inner__two-child"
  >
    <div
      className="sendbird-avatar-img rogu-image-renderer"
    >
      <div
        className="rogu-image-renderer__image"
        style={
          Object {
            "backgroundImage": "url(https://avatars3.githubusercontent.com/u/46333979?s=460&v=4)",
            "borderRadius": null,
          }
        }
      />
      <img
        alt=""
        className="rogu-image-renderer__hidden-image-loader"
        onError={[Function]}
        onLoad={[Function]}
        src="https://avatars3.githubusercontent.com/u/46333979?s=460&v=4"
      />
    </div>
    <div
      className="sendbird-avatar-img rogu-image-renderer"
    >
      <div
        className="rogu-image-renderer__image"
        style={
          Object {
            "backgroundImage": "url(https://avatars1.githubusercontent.com/u/1384313?s=460&v=4)",
            "borderRadius": null,
          }
        }
      />
      <img
        alt=""
        className="rogu-image-renderer__hidden-image-loader"
        onError={[Function]}
        onLoad={[Function]}
        src="https://avatars1.githubusercontent.com/u/1384313?s=460&v=4"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar should render default image if src is empty 1`] = `
<div
  className=" sendbird-avatar"
  role="button"
  style={
    Object {
      "height": "56px",
      "width": "56px",
    }
  }
  tabIndex={0}
>
  <div
    className="sendbird-avatar-img rogu-image-renderer"
  >
    <div
      className="rogu-image-renderer__image"
      style={
        Object {
          "backgroundImage": "url()",
          "borderRadius": null,
        }
      }
    />
    <img
      alt=""
      className="rogu-image-renderer__hidden-image-loader"
      onError={[Function]}
      onLoad={[Function]}
      src=""
    />
  </div>
</div>
`;
